[package]
name = "MyGameServer"
version = "0.1.0"
edition = "2024"

[dependencies]
mongodb = { version = "2.8.1", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
tungstenite = "0.21"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
bson = "2.8.1"
futures-util = "0.3"
serde_json = "1.0"
axum = "0.7"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"